attendance summary fix